edicao de pagamento
